fixed the task and button alignments

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
-.header-container, .list-container {
+.header-container {
   margin-top: 10px;
   margin-bottom: 20px;
   text-align: center
